--- a/index.html
+++ b/index.html
@@ -27,12 +27,30 @@
                     <h6>Rancagua, Chile</h6>
                     <h6>Programador Full Stack Java | Apasionado por el aprendizaje</h6>
                     <p>Soy un desarrollador full stack con multiples conociminetos en distintas tecnologias listo para cualquier desafio.</p>
+                </div>
             </div>
-            <div class=" "></div>
+            <div class="tarjetaEducacion">
+                <h1>Educación</h1>
+                <p>Coding Dojo - Bootcamp de Desarrollo Full Stack</p>
+                <p>Dic 2019 - Mar 2020</p>
+                <p>Triple cinturón negro en Python, MERN y C#</p>
+            </div>
         </div>
 
         <div class="derecha">
-            <div class="solicitudes"></div>
+            <div class="solicitudes">
+                <h3>Solicitudes de Conexión (2)</h3>
+                <div class="solicitud">
+                    <p><img src="perfil1.avif" alt=""> Kai Schoder</p>
+                    <img src="comprobado.png" alt="check">
+                    <img src="boton-eliminar.png" alt="eliminar">
+                </div>
+                <div class="solicitud">
+                    <p><img src="perfil2.webp" alt=""> Amira El-Masry</p>
+                    <img src="comprobado.png" alt="check">
+                    <img src="boton-eliminar.png" alt="eliminar">
+                </div>
+            </div>
             <div class="Conexiones"></div>
         </div>
     </div>
