--- a/index.html
+++ b/index.html
@@ -4,24 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagina de perfil</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <nav class="nav-list">
         <div class="logo">Perfil</div>
-        <ul class="enlaces">
-            <li><a href="#">Inicio</a></li>
-            <li><a href="#">Mi Perfil</a></li>
-            <li><a href="#">Encontrar Conexiones</a></li>
-            <li><input type="button" value="Cerrar Sesión" id="boton"></li>
-        </ul>
+            <ul class="enlaces">
+                <li><a href="#">Inicio</a></li>
+                <li><a href="#">Mi Perfil</a></li>
+                <li><a href="#">Encontrar Conexiones</a></li>
+                <li><input type="button" value="Cerrar Sesión" id="boton"></li>
+            </ul>
     </nav>
     
     <div class="contenedor">
         <div class="izquierda">
             <div class="tarjetaPresentacion">
                 <div class="superior"></div>
-                <img src="perfil-landing-page.png" alt="foto">
+                <img src="images/perfil-landing-page.png" alt="foto">
                 <div class="presentacion">
                     <h1>Christian Mimbela</h1>
                     <h6>Rancagua, Chile</h6>
@@ -41,17 +41,37 @@
             <div class="solicitudes">
                 <h3>Solicitudes de Conexión (2)</h3>
                 <div class="solicitud">
-                    <p><img src="perfil1.avif" alt=""> Kai Schoder</p>
-                    <img src="comprobado.png" alt="check">
-                    <img src="boton-eliminar.png" alt="eliminar">
+                    <img src="images/perfil1.avif" alt="">
+                    <p>Kai Schoder</p>
+                    <img src="images/comprobado.png" alt="check">
+                    <img src="images/boton-eliminar.png" alt="eliminar">
                 </div>
                 <div class="solicitud">
-                    <p><img src="perfil2.webp" alt=""> Amira El-Masry</p>
-                    <img src="comprobado.png" alt="check">
-                    <img src="boton-eliminar.png" alt="eliminar">
+                    <img src="images/perfil2.webp" alt="">
+                    <p> Amira El-Masry</p>
+                    <img src="images/comprobado.png" alt="check">
+                    <img src="images/boton-eliminar.png" alt="eliminar">
                 </div>
             </div>
-            <div class="Conexiones"></div>
+            <div class="conexiones">
+                <h3>Tus conexiones (+4)</h3>
+                <div class="conexion">
+                    <img src="images/perfil3.jpeg" alt="">
+                    <p>Adrien Desplatz</p>
+                </div>
+                <div  class="conexion">
+                    <img src="images/perfil4.jpeg" alt="">
+                    <p>Aarav Patel</p>
+                </div>
+                <div class="conexion">
+                    <img src="images/perfil5.jpg" alt="">
+                    <p>Lina Kovacevic</p>
+                </div>
+                <div class="conexion">
+                    <img src="images/perfil6.jpg" alt="">
+                    <p>Mateo Hernández</p>
+                </div>
+            </div>
         </div>
     </div>
 
